force-app/main/default/objects/Course__c/fields/Seats_Filled__c.field-meta.xml
<CustomField>
    <fullName>Seats_Filled__c</fullName>
    <label>Seats Filled</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>