force-app/main/default/objects/Course__c/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <label>Total Fees</label>
    <summarizedField>Enrollment__c.Fees_Amount__c</summarizedField>
    <summaryForeignKey>Enrollment__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>