force-app/main/default/objects/Course__c/validationRules/Check_Seats.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Seats</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Seats__c  &lt; 0</errorConditionFormula>
    <errorMessage>Seats cannot be negative</errorMessage>
</ValidationRule>